Fix text overflow on absolutely positioned elements

--- a/web/themes/default/source/scss/global.scss
+++ b/web/themes/default/source/scss/global.scss
@@ -414,7 +414,7 @@ nav.breadcrumbs {
   }
   li {
     position: absolute;
-    left: 100%;
+    left: -100%;
 
     &:last-child {
       position: static;
